# Productivity-app

./: README.md  app.py  backend.py  events.py  frontend.py  inputs.py  pyproject.toml
src/productivity_app/: main.py
src/productivity_app/interface/: frontend.py  image_manager.py
src/productivity_app/services/: app_service.py  backend_state.py  persistence.py
